--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "@supabase/supabase-js": "^2.47.12",
     "electron-updater": "^6.1.7"
   },
   "devDependencies": {
